trying to fix overflow display on mobile

--- a/index.css
+++ b/index.css
@@ -59,6 +59,7 @@ body {
   position: relative;
 }
 .options{
+  margin: 0em;
   width: 80vmin;
   position: relative;
 }
